Versão com todos as operações mapeadas até o momento expostas no swagger da aplicação. Mudanças a serem submetidas: 	modified:   classes/controller/MainController.py 	modified:   swagger.yml
